--- a/cultura.html
+++ b/cultura.html
@@ -67,6 +67,9 @@
         <!-- texto main -->
     </section>
 
+    <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px" width="100%" controls muted autoplay></video>
+
+
     <!-- Footer  -->
     <div id="footer" class="row">
         <div class="col-12 text-center">
@@ -88,6 +91,7 @@
             </span>
         </div>
     </div>
+
 
     <div id="google_translate_element" class="d-flex d-inline justify-content-end fixed-top"></div>
 
