--- a/gastronomia.html
+++ b/gastronomia.html
@@ -16,7 +16,7 @@
     <script src="js/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="gastronomy">
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0">
         <header class="">
@@ -67,6 +67,93 @@
         <!-- texto main -->
     </section>
 
+    <main class="text-dark">
+        <section>
+            <div class="container-fluid pt-4 pb-2 mb-4 bg-white">
+                <div class="d-flex align-items-center justify-content-center">
+                    <div class="container row">
+                        <div class="col-12 text-center">
+
+                            <h3 class="title">Gastronomia del pacífico</h3>
+                            <p class="text-justify">La gastronomía de la región Pacífica de Colombia está basada sobre todo en
+                                pescados y mariscos, debido a la cercanía de la zona al mar.
+
+                                Es reconocida por muchos expertos en la alta cocina y por la opinión general de los
+                                habitantes de Colombia, como la mejor gastronomía del país y una de las mejores de
+                                América Latina.
+
+
+
+                                Muchos de los visitantes de la región Pacífica suelen decir que lo exótico de sus
+                                paisajes se transmite a su gastronomía.
+
+                                Aparte de sus playas y maravillas naturales, la gastronomía es uno de los mayores
+                                atractivos turísticos del Pacífico colombiano.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container">
+
+                <div class="row d-flex align-items-center">
+
+                    <div class="col tarjeta5">
+                        <h4>Sopa de cangrejo</h4>
+                        <p>La sopa de cangrejos es una preparación culinaria en forma de sopa que contiene una especia
+                            de marisco</p>
+                    </div>
+                    <div class="col mb-4">
+                        <img class="img-fluid" src="img/gastronomia/IMG-20181120-WA0007.jpg">
+                    </div>
+
+                    <div class="w-100"></div>
+
+                    <div class="col  mb-4">
+                        <img class="img-fluid" src="img/gastronomia/WP_20140521_066.jpg">
+                    </div>
+                    <div class="col tarjeta5">
+                        <h4>Sudado de camarones</h4>
+                        <p>Es de los platos más famosos de la region y entre los que más llama a la gente a consumirlo.</p>
+                    </div>
+
+                    <div class="w-100"></div>
+
+                    <div class="col tarjeta5">
+                        <h4>Sopa de jaiba</h4>
+                        <p>La sopa de jaiba nos muestra una interesante mezcla de sabores, que nos recuerda el Pacífico
+                            Colombiano. Las técnicas de cocción en esta sopa, incorporando el frito, el guiso y el
+                            cocido, son un fiel testimonio del origen de esta receta; el achiote le da un color rojo y
+                            con carácter, no te aguantarás las ganas de devorarte esta delicia.</p>
+                    </div>
+                    <div class="col mb-4">
+                        <img class="img-fluid" src="img/gastronomia/WP_20140521_074.jpg">
+                    </div>
+
+                    <div class="w-100"></div>
+                </div>
+            </div>
+        </section>
+
+        <section class="mt-4 mb-4">
+            <div class="container-fluid pl-0 pr-0">
+                <div id="elemento1" class="row d-flex justify-content-center">
+
+                    <img src="img/gastronomia/IMG-20181120-WA0008.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/IMG_20180916_125145.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/IMG-20181120-WA0010.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/IMG_20180916_125205.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/WP_20140521_069.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/WP_20140521_062.jpg" alt="" srcset="" class="img_adaptada lazy">
+                    <img src="img/gastronomia/WP_20140521_088.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                </div>
+            </div>
+        </section>
+    </main>
+
     <!-- Footer  -->
     <div id="footer" class="row">
         <div class="col-12 text-center">
@@ -96,6 +183,9 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/aos.js"></script>
+    <script src="js/holder.js"></script>
+    <script src="js/in-view.min.js"></script>
+    <script src="js/jquery.lazy.min.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="js/app.js"></script>
 </body>
