--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </p>
           </div>
           <div class="col-12">
-            <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
+            <a name="" id="" class="btn botoncito btn-success" href="gastronomia.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
@@ -285,7 +285,7 @@
             </p>
           </div>
           <div class="col-12">
-            <a name="" id="" class="btn botoncito btn-success" href="#!" role="button">Ver más</a>
+            <a name="" id="" class="btn botoncito btn-success" href="cultura.html" role="button">Ver más</a>
           </div>
         </div>
       </div>
