--- a/turismo.html
+++ b/turismo.html
@@ -10,7 +10,7 @@
 
     <title>COOMUSTRANSTUR</title>
 
-
+    <link rel="stylesheet" href="css/featherlight.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -26,7 +26,7 @@
     }
 </style>
 
-<body>
+<body class="turismo">
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0">
         <header class="">
@@ -77,68 +77,214 @@
         <!-- texto main -->
     </section>
 
-    <section id="img_intro_turismo">
-        <main id="main_turismo" class="pt-4 d-flex justify-content-center align-items-center">
-            <h1>Guía Turística</h1>
-        </main>
-    </section>
+    <section id="">
+        <div class="row justify-content-around">
+            <div class="col-12">
+                <h3 class="title text-center">Sendero Ecoturístico Reserva forestal San cipriano</h3>
+            </div>
+            <div class="col-12 d-flex justify-content-center align-items-center">
+                <div class="text-center">
 
-    <main id="contenido_turismo" class="mt-5 mb-5">
-        <div class="container">
+                    <a href="#contenido_turismo1" class="tarjeta6">Charco Los Sabalos</a>
+                    <a href="#contenido_turismo2" class="tarjeta6">Cascada La Ventiadora</a>
+                    <a href="#contenido_turismo3" class="tarjeta6">Charco Oscuro</a>
+                    <a href="#contenido_turismo4" class="tarjeta6">Sendero La Conferencia</a>
+                    <a href="#contenido_turismo5" class="tarjeta6">Charco La Platina</a>
+                    <a href="#contenido_turismo6" class="tarjeta6">Sendero Charco La Tortuga</a>
+                    <a href="#contenido_turismo7" class="tarjeta6">Charco Peña Azul</a>
+                    <a href="#contenido_turismo8" class="tarjeta6">Charco Trompa del Diablo</a>
+                    <a href="#contenido_turismo9" class="tarjeta6">Zona de camping Fundacion San Cipriano</a>
 
-            <div class="row d-flex align-items-center">
-
-                <div class="col">
-                    <h3>Córdoba</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
-                        quibusdam oris</p>
                 </div>
-                <div class="col mb-4">
-                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
-                </div>
-
-                <div class="w-100"></div>
-
-                <div class="col  mb-4">
-                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
-                </div>
-                <div class="col ">
-                    <h3>San Cipriano</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
-                        quibusdam oris</p>
-                </div>
-
-                <div class="w-100"></div>
-
-                <div class="col">
-                    <h3>Casa Wenka</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos sunt deserunt unde ipsa
-                        quibusdam oris</p>
-                </div>
-                <div class="col mb-4">
-                    <img class="img-fluid" data-src="holder.js/500x300?auto=yes">
-                </div>
-
-                <div class="w-100"></div>
             </div>
         </div>
+    </section>
 
+    <main class="mt-5 mb-5">
+        <div class="container-fluid">
+
+            <div class="row">
+                <!-- Charco Los Sabalos -->
+                <div class="col text-center" id="contenido_turismo1">
+                    <img src="img/turismo/LOS ABALOS.jpg" alt="" class="img-fluid mb-3">
+                    <div class="row">
+                        <div class="col">
+                            <div class="galery_container row d-flex justify-content-center">
+
+                                <img src="img/turismo/los sabalos/WP_20140521_001.jpg" alt="" srcset="" class="img_adaptada lazy">
+                                <img src="img/turismo/los sabalos/WP_20140521_002.jpg" alt="" srcset="" class="img_adaptada lazy">
+                                <img src="img/turismo/los sabalos/WP_20140521_003.jpg" alt="" srcset="" class="img_adaptada lazy">
+                                <img src="img/turismo/los sabalos/WP_20140521_004.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cascada La Ventiadora -->
+            <div class="col text-center" id="contenido_turismo2">
+                <img src="img/turismo/LA VENTIADORA.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/cascada la ventiadora/IMG-20180906-WA0018.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0062.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/cascada la ventiadora/IMG-20180926-WA0118.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Charco Oscuro -->
+            <div class="col text-center" id="contenido_turismo3">
+                <img src="img/turismo/OSCURO.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/charco oscuro/IMG_20180916_152230.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/charco oscuro/WP_20140521_044.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/charco oscuro/WP_20140521_043.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/charco oscuro/WP_20181012_027.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sendero La Conferencia -->
+            <div class="col text-center" id="contenido_turismo4">
+                <img src="img/turismo/CONFERENCIA.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/la conferencia/WP_20140521_008.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la conferencia/WP_20140521_028.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la conferencia/WP_20140521_014.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la conferencia/DSC01306.JPG" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Charco La Platina -->
+            <div class="col text-center" id="contenido_turismo5">
+                <img src="img/turismo/PLATINA.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/la platina/WP_20181118_016.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la platina/WP_20181118_018.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la platina/WP_20181118_020.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la platina/WP_20181118_021.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Sendero Charco La Tortuga -->
+            <div class="col text-center" id="contenido_turismo6">
+                <img src="img/turismo/TORTUGA.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/la tortuga/WP_20140521_029.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la tortuga/WP_20140521_030.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la tortuga/WP_20140521_033.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la tortuga/WP_20140521_035.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/la tortuga/WP_20140521_039.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Charco Peña Azul -->
+            <div class="col text-center" id="contenido_turismo7">
+                <img src="img/turismo/PEÑA.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/peña azul/WP_20181012_022.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/peña azul/WP_20181012_060.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/peña azul/WP_20181012_061.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/peña azul/WP_20181012_062.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Charco Trompa del Diablo -->
+            <div class="col text-center" id="contenido_turismo8">
+                <img src="img/turismo/TROMPA DIABLO.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/trompa del diablo/WP_20181012_021.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/trompa del diablo/WP_20181012_047.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/trompa del diablo/WP_20181012_055.jpg" alt="" srcset="" class="img_adaptada lazy">
+                            <img src="img/turismo/trompa del diablo/WP_20181012_054.jpg" alt="" srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Zona de camping Fundacion San Cipriano -->
+            <div class="col text-center" id="contenido_turismo9">
+                <img src="img/turismo/fundacionSC.jpg" alt="" class="img-fluid mb-3">
+                <div class="row">
+                    <div class="col">
+                        <div class="galery_container row d-flex justify-content-center">
+
+                            <img src="img/turismo/zona de camping fundacion san cipriano/IMG-20181117-WA0030.jpg" alt=""
+                                srcset="" class="img_adaptada lazy">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <section class="mt-4 mb-4">
         <div class="container-fluid pl-0 pr-0">
             <div class="galery_container row d-flex justify-content-center">
 
-                <img src="https://picsum.photos/300" alt="" srcset="" class="img_adaptada lazy">
-                <img src="https://picsum.photos/400" alt="" srcset="" class="img_adaptada lazy">
-                <img src="https://picsum.photos/500" alt="" srcset="" class="img_adaptada lazy">
-                <img src="https://picsum.photos/600" alt="" srcset="" class="img_adaptada lazy">
-                <img src="https://picsum.photos/700" alt="" srcset="" class="img_adaptada lazy">
-                <img src="https://picsum.photos/800" alt="" srcset="" class="img_adaptada lazy">
+                <img src="img/turismo/reglamento.jpg" alt="" srcset="" class="img-fluid lazy">
 
             </div>
         </div>
     </section>
+
+
+
 
     <!-- Footer  -->
     <div id="footer" class="row">
@@ -172,6 +318,8 @@
     <script src="js/holder.js"></script>
     <script src="js/in-view.min.js"></script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script src="js/featherlight.min.js"></script>
+    <script src="js/parallax.js"></script>
     <script src="js/app.js"></script>
 
     <script>
