--- a/acerca.html
+++ b/acerca.html
@@ -147,8 +147,8 @@
 
                 <div class="timeline-content " data-aos="fade-up" data-aos-delay="50">
                     <h2>Title</h2>
-                    <div class="date">1 MAY 2016</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="date">1 ENE 2002</div>
+                    <p>En espera de contenido.</p>
                 </div>
             </div>
 
@@ -161,10 +161,8 @@
                         <img src="img/bg1.jpg" class="img-fluid" alt="">
                         <h2>Card Title</h2>
                     </div>
-                    <div class="date">25 MAY 2016</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
-                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
-                        amet in dolores. Alias, ullam.</p>
+                    <div class="date">1 ENE 2005</div>
+                    <p>En espera de contenido.</p>
                 </div>
 
             </div>
@@ -174,11 +172,9 @@
                 <div class="timeline-img"></div>
 
                 <div class="timeline-content ">
-                    <div class="date">3 JUN 2016</div>
+                    <div class="date">1 ENE 2009</div>
                     <h2>Quote</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
-                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
-                        amet in dolores. Alias, ullam.</p>
+                    <p>En espera de contenido.</p>
                 </div>
             </div>
 
@@ -188,10 +184,8 @@
 
                 <div class="timeline-content ">
                     <h2>Title</h2>
-                    <div class="date">22 JUN 2016</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime ipsa ratione omnis alias
-                        cupiditate saepe atque totam aperiam sed nulla voluptatem recusandae dolor, nostrum excepturi
-                        amet in dolores. Alias, ullam.</p>
+                    <div class="date">1 ENE 2018</div>
+                    <p>En espera de contenido.</p>
                 </div>
             </div>
 
