links en las paginas

--- a/acerca.html
+++ b/acerca.html
@@ -16,7 +16,7 @@
     <script src="js/jquery.min.js"></script>
 </head>
 
-<body>
+<body class="nosotros">
     <!-- INDEX -->
     <section class="container-fluid pl-0 pr-0">
         <header class="">
@@ -50,6 +50,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Inicio</a>
+                            </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="turismo.html">Guía turística</a>
                             </li>
@@ -138,8 +141,9 @@
     </section>
 
     <!-- Historia de las motobrujitas -->
+<section class="bg-white">
 
-    <h3 class="title text-center pt-4 pb-4">Historia de las Cooperativa Coomutranstur</h3>
+    <h3 class="title text-center pt-4 pb-4">Historia de la Cooperativa Coomutranstur</h3>
     <section class="timeline">
         <div class="container">
             <div class="timeline-item">
@@ -173,7 +177,7 @@
 
                 <div class="timeline-content ">
                     <div class="date">1 ENE 2009</div>
-                    <h2>Quote</h2>
+                    <h2>Title</h2>
                     <p>En espera de contenido.</p>
                 </div>
             </div>
@@ -239,6 +243,7 @@
 
                 </div>
             </div>
+</section>
 
             <div class="w-100"></div>
 
