--- a/cultura.html
+++ b/cultura.html
@@ -50,6 +50,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Inicio</a>
+                            </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="turismo.html">Guía turística</a>
                             </li>
@@ -67,7 +70,8 @@
         <!-- texto main -->
     </section>
 
-    <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px" width="100%" controls muted autoplay></video>
+    <video src="video/cultura/video grupo folcrorico cultural de cordoba 4 de Nov. del 2018_Trim.mp4" height="400px"
+        width="100%" controls muted autoplay></video>
 
 
     <!-- Footer  -->
