--- a/gastronomia.html
+++ b/gastronomia.html
@@ -50,6 +50,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav mt-2 mt-lg-0 mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="index.html">Inicio</a>
+                            </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="turismo.html">Guía turística</a>
                             </li>
