--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <h3 class="text-white text-center">Empresa líder en ecoturísmo a</h3>
               <span class="title sancipriano text-white text-center d-none d-xl-block">sancipriano</span>
               <h1><span class="sancipriano text-white text-center d-block d-xl-none">sancipriano</span></h1>
-              <a name="" id="" class="btn btn-lg mt-5 text-center btn-contacto" href="#footer" role="button">Contáctanos</a>
+              <a name="" id="" class="btn btn-lg mt-5 text-center btn-contacto" href="#contacto" role="button">Contáctanos</a>
             </div>
           </div>
         </div>
